--- a/example/example.html
+++ b/example/example.html
@@ -73,12 +73,19 @@
   <!-- Load Editor.js's Core -->
   <script src="../dist/editor.js"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js" integrity="sha256-ur/YlHMU96MxHEsy3fHGszZHas7NzH4RQlD4tDVvFhw=" crossorigin="anonymous"></script>
+
   <!-- Initialization -->
   <script>
     /**
      * To initialize the Editor, create a new instance with configuration object
      * @see docs/installation.md for mode details
      */
+
+    const extendedDebounceHandler = _.debounce(() => {
+      console.log('extended debounce handler');
+    }, 5000);
+
     var editor = new EditorJS({
       /**
        * Enable/Disable the read only mode
@@ -283,6 +290,8 @@
       },
       onChange: function() {
         console.log('something changed');
+
+        extendedDebounceHandler();
       }
     });
 
